<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_age_calculator"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_age_calculator" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_calculator" />
    </group>
</menu>