<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.alanbauza_menuopciones.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.alanbauza_menuopciones.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_age_calculator"
        android:name="com.example.alanbauza_menuopciones.ui.agecalculator.AgeCalculatorFragment"
        android:label="@string/menu_age_calculator"
        tools:layout="@layout/fragment_age_calculator" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.alanbauza_menuopciones.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.example.alanbauza_menuopciones.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
</navigation>